changing marin 5px for padding 3px on line 1148

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1145,7 +1145,7 @@ footer .active {
     }
     .projects-filters ul {
         flex-wrap: wrap;
-        margin: 5px;
+        padding: 3px;
     }
     .projects-filters li {
         padding: 0;
