--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -276,14 +276,44 @@ section.default.service {
     flex-wrap: wrap;
     margin-top: 25px;
 }
-.projects-images-container img {
-    width: 255px;
+.projects-images {
+    width: 280px;
+}
+.projects-images-area {
+    width: 250px;
     height: 160px;
     margin: 15px;
 }
-.projects-images-container img:hover {
-    opacity: 0.6;
-    cursor: pointer;
+.projects-images-area img {
+    width: inherit;
+    height: inherit;
+}
+.projects-images--info {
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.5);
+    width: inherit;
+    height: inherit;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
+    flex-direction: column;
+    text-align: center;
+}
+.projects-images-area:hover .projects-images--info {
+    display: flex;
+}
+.projects-images--info h3 {
+    margin-bottom: 15px;
+    font-size: 19px;
+    font-weight: 600;
+    text-transform: uppercase;
+}
+.projects-images--info p {
+    line-height: 23px;
+    padding: 0px 35px;
+    font-size: 12px;
+    color: #DADAD8;
 }
 .less-padding {
     padding-bottom: 50px;
@@ -959,11 +989,6 @@ footer .active {
     .happy-clients-area .slide {
         max-width: 770px;
     }
-    .projects-images-container img {
-        width: 335px;
-        height: 240px;
-        margin: 15px;
-    }
 
 
     .partners-logos img {
@@ -1157,13 +1182,15 @@ footer .active {
     .projects-images-container.container {
         margin-top: 15px;
     }
-    .projects-images-container img {
-        width: 100%;
-        height: auto;
-        padding: 0px 30px;
-        margin: auto;
-        margin-top: 15px;
+    .projects-images {
+        width: 330px;
     }
+    .projects-images-area {
+        width: 314px;
+        height: 194px;
+        margin: 8px;
+    }
+
 
 
     .our-team  {
